# rize-tng

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  IMPLEMENTATION.md  PLAN.md  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
.claude/tasks/: todo.md
apps/orchestrator/: CLAUDE.md  Dockerfile  package.json  tsconfig.json
apps/web/: CLAUDE.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: architecture.md  multi-cloud-rationale.md  persona.md
docs/plans/: 2026-04-25-orchestrator-cfo-design.md  2026-04-25-orchestrator-cfo-implementation.md
infra/: ARCHITECTURE.md  DEBUG.md  README.md  architecture.excalidraw  docker-compose.prod.yml
infra/alibaba/: .gitignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  redeploy-browser-agent.sh  terraform.tfvars.example  user-data.sh  variables.tf
infra/aws/: .gitignore  README.md  main.tf  outputs.tf  refresh-orchestrator-creds.sh  terraform.tfvars.example  upload-web.py  user-data.sh  (+1 more)
pitch/: deck.md  demo-runbook.md  script.md  stats.md
services/browser-agent/: CLAUDE.md  Dockerfile  pyproject.toml
services/browser-agent/recordings/: grant_happy_path.json  itekad_happy_path.json  lotus_happy_path.json
services/browser-agent/src/: runner.py  server.py
services/browser-agent/src/flows/: __main__.py  grant_application.py  itekad_application.py  lotus_procurement.py  types.py
services/browser-agent/src/lib/: agent_llm.py  catalog.py  generate_pdf.py  patch_browser_use.py  selectors.py
services/browser-agent/src/storage/: oss.py
(+85 files in other folders)
