[project]
name = "tng-rise-browser-agent"
version = "0.1.0"
description = "Python browser agent. Runs Playwright + browser-use to fill grant forms and procurement carts."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "httpx>=0.27.0",
    "playwright>=1.48.0",
    "browser-use>=0.1.40",
    "langchain-anthropic>=0.2.4",
    "langchain-openai>=0.2.0",
    "oss2>=2.18.5",
    "python-dotenv>=1.0.1",
    "anthropic>=0.39.0",
    "boto3>=1.35.0",
    "reportlab>=4.2.0",
    "pdf2image>=1.17.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.1",
    "pytest>=8.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
